# ideal-fiesta

./: Cargo.toml  LICENSE  router.yaml
example/: products.graphql  supergraph.graphql  supergraph.yaml  users.graphql
src/plugins/: authz.rs  mod.rs
